--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -772,12 +772,17 @@
 </script>
 
 <script type="text/template" id="validate-data-list-container">
+    <div class="refresh-list-wrapper">
+        <button class="refresh-list">Refresh data</button>
+    </div>
     <div class="wrapper">
     </div>
-    <div class="pagination">
-        <button class="previous">prev</button>
-        <button class="next">next</button>
-    </div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination validate-data-pagination">
+            <li class="page-item"><a class="page-link previous" href="#">Previous</a></li>
+            <li class="page-item"><a class="page-link next" href="#">Next</a></li>
+        </ul>
+    </nav>
 </script>
 
 <script type="text/template" id="validate-data-detail-container">
@@ -793,5 +798,13 @@
         <button class="show-map-button">Show in map</button>
         <button class="show-detail">Show detail</button>
         <button class="hide-detail">Hide detail</button>
+        <button class="accept-data">Accept</button>
+        <div class="validate-data-action">
+            <p>
+                Are you sure you want to accept this data?
+            </p>
+            <button class="accept-validate">Yes</button>
+            <button class="cancel-validate">Cancel</button>
+        </div>
     </div>
 </script>
