--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -773,9 +773,9 @@
 
 <script type="text/template" id="validate-data-list-container">
     <div class="refresh-list-wrapper">
-        <button class="refresh-list">Refresh data</button>
+        <button class="refresh-list"><i class="fa fa-refresh" aria-hidden="true"></i> Refresh data</button>
     </div>
-    <div class="wrapper">
+    <div class="validate-wrapper">
     </div>
     <nav aria-label="Page navigation">
         <ul class="pagination validate-data-pagination">
@@ -788,17 +788,33 @@
 <script type="text/template" id="validate-data-detail-container">
     <div class="validate-data-detail-wrapper" data-id="<%= id %>">
         <div class="container">
-            <%= original_species_name %>
+            <div class="validate-data-header">
+                <div class="detail-container-title">
+                    Species Name
+                </div>
+                <p> <%= original_species_name %> </p>
+                <div class="detail-container-title"> Collection Date </div>
+                <p> <%= collection_date %> </p>
+                <div class="detail-container-title"> Uploader </div>
+                <p> <%= owner %> </p>
+            </div>
         </div>
-        <div class="detail-container">
-            <p> notes = <%= notes %> </p>
-            <p> category = <%= category %> </p>
-            <p> custodian = <%= institution_id %> </p>
+        <div class="detail-container container">
+            <div class="detail-container-title"> Notes </div>
+            <div> <%= notes %> </div>
+            <div class="detail-container-title"> Category </div>
+            <div> <%= category %> </div>
+            <div class="detail-container-title"> Custodian </div>
+            <div> <%= institution_id %> </div>
+            <div class="detail-container-title"> Taxon Class </div>
+            <div> <%= taxonomy.taxon_class %> </div>
         </div>
-        <button class="show-map-button">Show in map</button>
-        <button class="show-detail">Show detail</button>
-        <button class="hide-detail">Hide detail</button>
-        <button class="accept-data">Accept</button>
+        <div class="detail-container-buttons">
+            <button class="show-map-button">Show in map</button>
+            <button class="show-detail">Show detail</button>
+            <button class="hide-detail">Hide detail</button>
+            <button class="accept-data">Accept</button>
+        </div>
         <div class="validate-data-action">
             <p>
                 Are you sure you want to accept this data?
