--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -351,6 +351,8 @@
             <div class="upload-data sub-control-panel">
                 <i class="fa fa-upload" aria-hidden="true"></i>
             </div>
+        {% endif %}
+        {% if can_validate %}
             <div class="validate-data sub-control-panel">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
