Updates from develop branch (#395)
* Fix menu (#357)

* Add custom render dashboard (#359)

* Add int and float types in csv upload (#360)

* Fix bugs in layer selector order (#363)

* Fix unsaved selected layer not displayed (#364)

* Add api to get non validated records for sidepanel validation later (#365)

* Api to get non validated records

* Add tests for unvalidated records api

* Generate permission by taxon class (#366)

* Get allowed collections based on permission (#368)

* Fix selector bugs (#370)

* Update validate records page (#371)

* Fix send email to validator (#373)

* Fix legend is covered (#375)

* Fix biodiversity legend bug (#376)

* Spatial filter (#374)

* Add spatial filter panel button

* User boundary model

* Add upload functionality in modal

* Backend for upload user boundary shapefile

* Show boundary list and add click event

* Search by user boundary

* Add boundary name input

* Select multiple boundary

* Add clear and apply filter

* Update search

* Add search mode flag

* Make marker still clickable

* Remove console log

* Update production requirements (#377)

* Fix spatial search for location site (#381)

* Fix search user_boundaries

* Fix reset search (#383)

* Add coming soon menu (#382)

* Fix spatial search if site outside boundary (#384)

* Additional filters (#385)

* Optional filters

* Fix tests

* Add new fields to collection models (#386)

* Add new fields to collection models

* Add migration file

* Add site code to location site

* Update csv upload to accomodate new fields

* Add missing migration

* Fix tests

* Fix flake8

* Fix filter not working (#387)

* Add reference category filter (#388)

* Add api to get the reference category

* Show reference category lists in filter panel

* Filter function with reference category

* Fix travis

* Fix missing variable (#389)

* Fix csv uploads (#390)

* Updat

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -49,7 +49,7 @@
                 <div class="close-button search-reset pull-left">
                     Reset
                 </div>
-                    <span class="title">
+                <span class="title">
                         SEARCH
                     </span>
                 <div class="close-button map-search-close pull-right">
@@ -75,9 +75,23 @@
                 FILTERS
             </div>
         </div>
+
+        {% if modules_exists %}
+        <div class="row sub-filter">
+            <div class="col-lg-12 subtitle">
+                MODULE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+            </div>
+        </div>
+        <div class="row module-filters" style="display: none;"  data-toggle="tooltip" data-placement="top" title="Coming Soon">
+            <div class="col-lg-4 not-ready"><img src="/static/img/fish-2.svg"></div>
+            <div class="col-lg-4 not-ready"><img src="/static/img/invertebras-2.svg"></div>
+            <div class="col-lg-4 not-ready"><img src="/static/img/algae-2.svg"></div>
+        </div>
+        {% endif %}
+
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle" id="date-filter-subtitle">
-                DATE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+                {{ date_title }} <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
             </div>
         </div>
         <div class="row" style="display: none">
@@ -97,33 +111,7 @@
         </div>
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
-                COLLECTOR <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
-            </div>
-        </div>
-        <div class="row" style="display: none">
-            <div class="col-lg-12 filter-content" id="filter-collectors">
-            </div>
-            <div class="button-filter-wrapper">
-                <button class="apply-filter">Apply Filter</button>
-                <button class="clear-filter">Clear Filter</button>
-            </div>
-        </div>
-        <div class="row sub-filter">
-            <div class="col-lg-12 subtitle">
-                CATEGORY <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
-            </div>
-        </div>
-        <div class="row" style="display: none">
-            <div class="col-lg-12 filter-content" id="filter-category">
-            </div>
-            <div class="button-filter-wrapper">
-                <button class="apply-filter">Apply Filter</button>
-                <button class="clear-filter">Clear Filter</button>
-            </div>
-        </div>
-        <div class="row sub-filter">
-            <div class="col-lg-12 subtitle">
-                ADMINISTRATIVE AREA <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+                {{ spatial_scale_title }} <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
             </div>
         </div>
         <div class="row" style="display: none">
@@ -134,7 +122,100 @@
                 <button class="clear-filter">Clear Filter</button>
             </div>
         </div>
+        <div class="row sub-filter">
+            <div class="col-lg-12 subtitle">
+                ORIGINS <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+            </div>
+        </div>
+        <div class="row" style="display: none">
+            <div class="col-lg-12 filter-content" id="filter-category">
+            </div>
+            <div class="button-filter-wrapper">
+                <button class="apply-filter">Apply Filter</button>
+                <button class="clear-filter">Clear Filter</button>
+            </div>
+        </div>
 
+        {% if use_ecological_condition %}
+        <div class="row sub-filter">
+            <div class="col-lg-12 subtitle">
+                ECOLOGICAL CONDITION <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+            </div>
+        </div>
+        <div class="row ecological-condition" style="display: none;"  data-toggle="tooltip" data-placement="top" title="Coming Soon">
+            <div class="row col-lg-12">
+                <div class="col-lg-4 neutral">
+                    Neutral (N)
+                </div>
+                <div class="col-lg-4 good">
+                    Good (G)
+                </div>
+                <div class="col-lg-4 fair">
+                    Fair (F)
+                </div>
+            </div>
+            <div class="row col-lg-12">
+                <div class="col-lg-4 poor">
+                    Poor (P)
+                </div>
+                <div class="col-lg-4 seriously-modified">
+                    Seriously Modified (SM)
+                </div>
+                <div class="col-lg-4 critically-modified">
+                    Critically Modified (CM)
+                </div>
+            </div>
+        </div>
+        {% endif %}
+
+        {% if use_conservation_status %}
+        <div class="row sub-filter">
+            <div class="col-lg-12 subtitle">
+                CONSERVATION STATUS <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+            </div>
+        </div>
+        <div class="row" style="display: none" data-toggle="tooltip" data-placement="top" title="Coming Soon">
+            <div class="col-lg-12 filter-content conservation-status">
+                <select disabled>
+                    <option value="">Conservation Status</option>
+                </select>
+            </div>
+        </div>
+        {% endif %}
+
+        {% if use_reference_category %}
+        <div class="reference-category-wrapper"></div>
+        {% endif %}
+
+        <div class="row sub-filter">
+            <div class="col-lg-12 subtitle">
+                {{ collector_title }} <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+            </div>
+        </div>
+        <div class="row" style="display: none">
+            <div class="col-lg-12 filter-content" id="filter-collectors">
+            </div>
+            <div class="button-filter-wrapper">
+                <button class="apply-filter">Apply Filter</button>
+                <button class="clear-filter">Clear Filter</button>
+            </div>
+        </div>
+    </div>
+</script>
+
+<script type="text/html" id="reference-category-template">
+    <div class="row sub-filter">
+        <div class="col-lg-12 subtitle">
+            REFERENCE CATEGORY <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+        </div>
+    </div>
+    <div class="row" style="display: none">
+        <div class="col-lg-12 filter-content reference-category">
+        </div>
+        <div class="button-filter-wrapper">
+            <button class="apply-filter">Apply Filter</button>
+            <button class="clear-filter">Clear Filter</button>
+        </div>
     </div>
 </script>
 
@@ -165,6 +246,79 @@
     </div>
 </script>
 
+<script type="text/html" id="spatial-filter-panel">
+    <div class="spatial-filter-container map-control-panel-box">
+        <div class="row spatial-filter-panel-title">
+            <div class="col-lg-12" style="padding-right: 0">
+                    <span class="title">
+                        SPATIAL FILTER
+                    </span>
+                <div class="spatial-filter-container-close close-button pull-right">
+                    X
+                </div>
+            </div>
+        </div>
+        <div class="row content">
+            <button id="spatial-filter-panel-upload">Upload New Boundary</button>
+        </div>
+        <div class="row boundary-list">
+        </div>
+        <div class="row boundary-action">
+            <button class="spatial-apply-filter">Apply Filter</button>
+            <button class="spatial-clear-filter">Clear Filter</button>
+        </div>
+    </div>
+
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Upload a boundary</h5>
+                    <button type="button" class="close close-upload-boundary-modal"
+                            aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Boundary Name</label>
+                        <input type="text" class="form-control" id="boundary-input-name" aria-describedby="emailHelp" placeholder="Enter boundary name">
+                    </div>
+                    <label for="file"><b>Upload shapefile here</b></label>
+                    <button type="button" class="btn btn-primary btn-boundary-upload">
+                        <span class="glyphicon glyphicon-cloud-upload"></span> Upload shapefiles
+                    </button>
+                    <input id="fileupload" type="file" name="shapefile" multiple
+                           style="display: none;"
+                           data-url="{% url 'shapefile-upload' %}"
+                           data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+
+                    <table id="file-list" class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Files</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for shapefile in shapefiles %}
+                            <tr>
+                                <td><a href="{{ shapefile.fileurl }}">{{ shapefile.filename }}</a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+
+                    <div class="help-block process-shapefile">
+                        Processing shapefiles...
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+</script>
+
 <script type="text/html" id="layer-selector-row">
     <li class="ui-state-default">
         <div class="row-title">
@@ -191,8 +345,16 @@
             <i class="fa fa-location-arrow" aria-hidden="true"></i>
         </div>
         {% if user.is_authenticated %}
+            <div class="spatial-filter sub-control-panel">
+                <i class="fa fa-crop" aria-hidden="true"></i>
+            </div>
             <div class="upload-data sub-control-panel">
                 <i class="fa fa-upload" aria-hidden="true"></i>
+            </div>
+        {% endif %}
+        {% if can_validate %}
+            <div class="validate-data sub-control-panel">
+                <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         {% endif %}
     </div>
@@ -547,8 +709,8 @@
     <div class="third-party-fetching-info">
         Fetching...
     </div>
-   <div class="content row third-party-wrapper">
-   </div>
+    <div class="content row third-party-wrapper">
+    </div>
 </script>
 
 <script type="text/template" id="records-list-detail">
@@ -607,6 +769,60 @@
                     <div class="col-8">500 up</div>
                 </div>
             </div>
+        </div>
+    </div>
+</script>
+
+<script type="text/template" id="validate-data-list-container">
+    <div class="refresh-list-wrapper">
+        <button class="refresh-list"><i class="fa fa-refresh" aria-hidden="true"></i> Refresh data</button>
+    </div>
+    <div class="validate-wrapper">
+    </div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination validate-data-pagination">
+            <li class="page-item"><a class="page-link previous" href="#">Previous</a></li>
+            <li class="page-item"><a class="page-link next" href="#">Next</a></li>
+        </ul>
+    </nav>
+</script>
+
+<script type="text/template" id="validate-data-detail-container">
+    <div class="validate-data-detail-wrapper" data-id="<%= id %>">
+        <div class="container">
+            <div class="validate-data-header">
+                <div class="detail-container-title">
+                    Species Name
+                </div>
+                <p> <%= original_species_name %> </p>
+                <div class="detail-container-title"> Collection Date </div>
+                <p> <%= collection_date %> </p>
+                <div class="detail-container-title"> Uploader </div>
+                <p> <%= owner %> </p>
+            </div>
+        </div>
+        <div class="detail-container container">
+            <div class="detail-container-title"> Notes </div>
+            <div> <%= notes %> </div>
+            <div class="detail-container-title"> Category </div>
+            <div> <%= category %> </div>
+            <div class="detail-container-title"> Custodian </div>
+            <div> <%= institution_id %> </div>
+            <div class="detail-container-title"> Taxon Class </div>
+            <div> <%= taxonomy.taxon_class %> </div>
+        </div>
+        <div class="detail-container-buttons">
+            <button class="show-map-button">Show in map</button>
+            <button class="show-detail">Show detail</button>
+            <button class="hide-detail">Hide detail</button>
+            <button class="accept-data">Accept</button>
+        </div>
+        <div class="validate-data-action">
+            <p>
+                Are you sure you want to accept this data?
+            </p>
+            <button class="accept-validate">Yes</button>
+            <button class="cancel-validate">Cancel</button>
         </div>
     </div>
 </script>
